--- a/src/app/admin/admin-header/admin-header.component.html
+++ b/src/app/admin/admin-header/admin-header.component.html
@@ -1,3 +1,3 @@
 <div class="alert alert-primary" role="alert" style="text-align: center;margin-bottom: 0%;">
-    <span class="text">Restaurant App</span>
+    <span class="text">Restaurant App Admin</span>
   </div>
