local food and chinese food UI is added

--- a/src/app/admin/admin-navbar/admin-navbar.component.html
+++ b/src/app/admin/admin-navbar/admin-navbar.component.html
@@ -12,10 +12,10 @@
           <a class="nav-link" routerLink="/admin/addfood"> Add Food</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/chinese">Manage Chinese Food</a>
+          <a class="nav-link" routerLink="/chinesfoodmanagement">Manage Chinese Food</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" routerLink="/local"> Manage Local Food</a>
+          <a class="nav-link" routerLink="/localfoodmanagement"> Manage Local Food</a>
         </li>
 
         
