--- a/src/app/user/chinese-food/chinese-food.component.html
+++ b/src/app/user/chinese-food/chinese-food.component.html
@@ -1,1 +1,14 @@
 <p>chinese-food works!</p>
+
+
+<div id="chinisefoddlisting" class="row"  style="padding-left:3%; ">
+    <div class="card" style="width: 18rem;margin-left:9px;margin-top: 9px;" *ngFor="let data of chinesFoodItems" [style.display]="(data.isAvailable==false)?'none':''">
+        <img class="card-img-top" src="{{data.image}}" alt="Card image cap" height="200px" width="100px" style="margin-top: 9px;">
+        <div class="card-body">
+          <h5 class="card-title">{{data.name}}</h5>
+          <p class="card-text">{{data.description}}</p>
+          <p class="card-text">Quatity:-{{data.qty}}</p>
+          <a href="#" class="btn btn-primary">Place Order</a>
+        </div>
+      </div>
+</div>
